# xwrapup_rs_macro

./: Cargo.toml
crates/ds_parser/: Cargo.toml
crates/ds_parser/src/: lib.rs
crates/ds_parser/src/ds_node/: ds_context.rs  ds_root.rs  ds_traits.rs  mod.rs
crates/ds_parser/src/ds_traverse/: mod.rs
crates/ds_parser/src/proc_macros_inner/src/: lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
crates/xwrapup_rs_macro/: Cargo.toml
crates/xwrapup_rs_macro/src/: lib.rs
crates/xwrapup_rs_macro/src/ds_node/: ds_context.rs
crates/xwrapup_rs_macro/src/proc_macros_inner/: Cargo.toml
crates/xwrapup_rs_macro/src/ui_code_gen/: mod.rs
crates/xwrapup_rs_macro/src/ui_code_gen/xwrapup/: mod.rs
examples/example0/: Cargo.toml  example0.rs  ui
examples/example0/src/: main.rs
src/: lib.rs
src/ds_node/: Cargo.toml  ds_attr.rs  ds_context.rs  ds_custom_token.rs  ds_if.rs  ds_iter.rs  ds_node.rs  ds_root.rs  ds_traits.rs  ds_widget.rs  mod.rs
src/macro_utils/: Cargo.toml
src/macro_utils/src/: lib.rs
src/ui_code_gen/: mod.rs  ucg_widget.rs
src/ui_code_gen/xwrapup/: mod.rs
