[package]
name = "ds_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

# self dependence
proc_macros_inner = { path = "src/proc_macros_inner" }