[package]
name = "xwrapup_rs_macro"
version = "0.0.1"
authors = ["W-Mai <1341398182@qq.com>"]
description = "xWrapup Rust Macro"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

# self dependence
proc_macros = { path = "../proc_macros" }
